--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -34,7 +34,7 @@ header {
 }
 main {
   grid-area: main;
-  padding: 4rem;
+  padding-top: 4rem;
 }
 footer {
   grid-area: footer;
@@ -160,7 +160,7 @@ a.brand {
 aside {
   position: fixed;
   width: 50rem;
-  height: 100%;
+  height: 100rem;
   background-color: white;
   z-index: 1000 ;
   transform: translate(-50rem);
@@ -168,29 +168,46 @@ aside {
 }
 aside.open{
   transform: translate(0) ;
+  border-radius: 0px 100rem 120rem 0px;
 }
+
+
 button.open-sidebar{
   font-size: 2.5rem;
   padding-left: 2rem;
   margin:0 0.5rem;
   background:none;
   color: black;
-  cursor:pointer
+  cursor:pointer;
+  border: none;
 }
 button.open-sidebar:hover{
-  border-color: black;
+  color:white;
+
 }
+
+.categories_category{
+  font-size: 3rem;
+  color: black;
+}
+
 aside ul{
-  padding:0;
+  padding:1rem;
   list-style: none;
+  font-family: 'Fugaz One';
+  font-size: 5rem;
 }
 aside li{
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   padding:1rem;
 }
 button.close-sidebar{
-  padding:0.3rem 0.8rem;
+  padding-top: 0;
+  padding-left: 4rem;
+  margin-top: 0;
+  border: none;
+  background-color: white;
 }
 
 
@@ -209,6 +226,12 @@ img.medium {
 }
 img.large{
   width:100%;
+}
+
+img.topproduct{
+  width: 50%;
+  height: 100rem;
+  object-fit: cover;
 }
 
 /* Card */
@@ -341,14 +364,15 @@ img.large{
 
 /* Search */
 .search button{
-  border-radius:0  0.5rem 0.5rem 0;
+  border: none;
   border-right: none;
   margin-right: 0.5rem;
+  background-color: white;
 }
-.search input{ 
-  border-radius: 0.5rem 0 0 0.5rem;
-  border-right: none;
-  margin-left: 0.5rem;
+.search input{
+  border: none;
+  border-bottom: 1px solid black;
+
 }
 .active{
   font-weight:bold;
