--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,700&display=swap');
 
 html {
   font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
@@ -8,7 +10,8 @@ body {
   margin: 0;
   height: 100vh;
   font-size: 1.6rem;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 600;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -31,6 +34,7 @@ header {
   grid-area: header;
   background-color: white;
   padding-top: 1.4rem;
+  padding-right: 3rem;
 }
 main {
   grid-area: main;
@@ -104,15 +108,24 @@ header a {
   color: black;
   font-family: 'Fugaz One', cursive;
   padding:1rem;
+  letter-spacing: 2px;
 }
 
 
 a.brand {
   color: white;
   -webkit-text-stroke: 1px black;
+  font-family: 'Fugaz One', cursive;
   font-size: 4.5rem;
   font-weight: bold;
   margin-top: 2rem;
+}
+
+.maintopic{
+  text-align: center;
+  padding: 11rem 0rem 3rem 0rem;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 5rem;
 }
 
 .badge{
@@ -156,6 +169,51 @@ a.brand {
   padding:1rem
 }
 
+
+/* Footer */
+.footer-row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 500%;
+  background-color: black;
+  color: white;
+  font-family: 'Fugaz One', cursive;
+  padding: 0 2rem 0 2rem;
+}
+
+.footer-text{
+  text-align: center;
+  font-size: 4rem;
+  box-shadow: -12px 12px;
+  border: 0.5px solid white;
+}
+
+.footer-about{
+  padding-right: 6rem;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+  font-size: 4rem;
+
+}
+
+.footer-abouttext{
+  padding:2rem;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+  font-size: 3rem; 
+  color: #dedede;
+}
+
+.footer-reserve{
+  font-size: 2rem;
+  padding-top: 4rem;
+  color: #bdbdbd;
+}
+
+
 /* Aside */
 aside {
   position: fixed;
@@ -181,14 +239,35 @@ button.open-sidebar{
   cursor:pointer;
   border: none;
 }
-button.open-sidebar:hover{
-  color:white;
 
-}
 
 .categories_category{
   font-size: 3rem;
   color: black;
+}
+
+.categories_category:hover{
+  /* color: white;
+  -webkit-text-stroke: 1.5px  black; */
+  font-size: 3.1rem;
+  color: black;
+}
+
+.categories_category:before{
+  content: "";
+  position: absolute;
+  width: 0.3rem;
+  height: 0.3rem;
+  border-radius: 50%;
+  border: 2px solid black;
+  transition: 0.5s;
+}
+
+.categories_category:hover:before{
+  content: "";
+  width: 15rem;
+  height: 0.1rem;
+  border-radius: 20%;
 }
 
 aside ul{
@@ -212,47 +291,87 @@ button.close-sidebar{
 
 
 
+
+
 /* Image */
 img {
-  border-radius: 0.5rem;
+  border-radius: 0.3rem;
+  border: none;
 }
 img.small {
   max-width: 5rem;
   width: 100%;
 }
 img.medium {
-  max-width: 29rem;
   width: 100%;
+  
 }
 img.large{
-  width:100%;
+  max-width:66%;
+  margin: 2.5rem 0 0 3rem ;
+  max-height: 100rem;
+  border-radius: 0;
+  border: 2px solid black;
 }
 
 img.topproduct{
   width: 50%;
   height: 100rem;
   object-fit: cover;
+  border-radius: 0;
+
 }
+
 
 /* Card */
 .card {
-  border: 0.1rem #c0c0c0 solid;
-  background-color: #f8f8f8;
+  border:none;
+  background-color:white;
   border-radius: 0.5rem;
   margin: 1rem;
+  padding: 2vw;  
+  align-self: flex-start;
 }
 .card-body {
-  padding: 1rem;
+  padding-top: rem ;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
 }
+
 .card-body > * {
   margin-bottom: 0.5rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.product-name{
+  text-align: center;
+  color: black;
 }
 .price {
   font-size: 2rem;
+  padding-top: 1rem;
 }
+
+.seller-name{
+  color: black;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 600;
+}
+
+.seller-logosmall{
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 2px solid black;
+  vertical-align: middle;
+  margin-right: 1rem;
+
+}
+
 /* Rating */
 .rating span {
-  color: #f0c040;
+  color: black;
   margin: 0.1rem;
 }
 
@@ -316,12 +435,14 @@ img.topproduct{
   display: none;
   right:0;
   min-width: 15rem;
-  padding: 1rem;
+  padding: 0rem 0.5rem 1rem 0.5rem ;
   z-index: 1;
   background-color: white;
   margin: 0;
   margin-top: 0.4rem;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
+  font-size: 13px;
+  text-align: center;
 }
 .dropdown:hover .dropdown-content{
   display: block;
