--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -83,8 +83,9 @@ input, select, textarea,button{
 }
 
 button{
-  background-color: #f8f8f8;
-  cursor:pointer
+  background-color: black;
+  cursor:pointer;
+  color: white;
 }
 input:hover, 
 select:hover, 
@@ -94,8 +95,14 @@ button:hover{
 }
 
 button.primary{
-  background-color: #f0c040;
+  background-color: black;
+  border-radius: 50%;
+  font-size: 4rem;
+  font-family: 'Fugaz One', cursive;
+  margin-top: 2rem;
 }
+
+
 button.block{
   width:100%;
 }
@@ -307,7 +314,7 @@ img.medium {
   
 }
 img.large{
-  max-width:66%;
+  max-width:95%;
   margin: 2.5rem 0 0 3rem ;
   max-height: 100rem;
   border-radius: 0;
@@ -353,6 +360,7 @@ img.topproduct{
   padding-top: 1rem;
 }
 
+/* Seller */
 .seller-name{
   color: black;
   font-family: 'Ubuntu', sans-serif;
@@ -367,6 +375,38 @@ img.topproduct{
   vertical-align: middle;
   margin-right: 1rem;
 
+}
+
+.seller-container{
+  width: 95%;
+  height: 20rem;
+  overflow: hidden;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: 4px solid black;
+}
+.seller-logo{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.seller-information{
+  justify-content: space-between;
+  text-align: start;
+  transform: translate(0, -80px);
+  font-size: 2rem;
+  padding: 2rem;
+  border: 1px  dashed black;
+}
+
+
+/* Product detail */
+.productdetail-name{
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 900;
+  font-size: 5rem;
+  padding-bottom: 1rem;
 }
 
 /* Rating */
@@ -489,6 +529,7 @@ img.topproduct{
   border-right: none;
   margin-right: 0.5rem;
   background-color: white;
+  color: black;
 }
 .search input{
   border: none;
