--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -536,6 +536,17 @@ img.topproduct{
   border-bottom: 1px solid black;
 
 }
+
+.search-filter{
+  text-align: center;
+  padding: 2rem;
+  font-size: 5rem;
+  border-radius: 50%;
+  box-shadow: -13px 13px;
+  border: 1px solid black;
+  max-width: 35rem;
+
+}
 .active{
   font-weight:bold;
 }
