--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,6 +108,7 @@ button.block{
 }
 button.small{
   font-size: 1.2rem;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 /* Header */
@@ -452,17 +453,79 @@ img.topproduct{
 
 /* Form */
 
+.formtitle{
+  text-align: center;
+  background-color: black;
+  color: white;
+  width: 70rem;
+  height: 17rem;
+  font-size: 8rem;
+  font-family: 'Fugaz One', cursive;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  border-radius: 50%;
+  margin-top: 9rem;
+}
+
 .form{
-  max-width: 60rem;
-  margin:0 auto;
+  max-width: 80rem;
+  width: 100%;
+  display: inline-block;
 }
 .form >div{
+  margin-bottom: 15px;
   display: flex;
-  flex-direction: column;
-  margin: 1rem;
+  align-items: center;
 }
+
 .form label {
-  margin: 1rem 0;
+  width: 200px;
+  margin-right: 10px;
+  font-size: 14px;
+}
+
+.form input{
+  border: none;
+  border-bottom: 1px solid gray;
+  border-radius: none;
+  width: 50rem;
+
+}
+
+.formbutton{
+  background-color: white;
+  color: black;
+  border: 2px dashed black;
+  border-radius: 50%;
+  font-family: 'Fugaz One', cursive;
+  font-size: 4rem;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.formbutton:hover{
+  border: 5px dashed black;
+}
+
+
+/* List */
+.listtitle{
+  text-align: center;
+  width: 70rem;
+  height: 17rem;
+  background-color: black;
+  color: white;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Fugaz One', cursive;
+  font-size: 8rem;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 9rem;
+  margin-bottom: 2rem;
 }
 
 /* Dropdown */
