--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -303,12 +303,16 @@ button.close-sidebar{
 
 /* Image */
 img {
-  border-radius: 0.3rem;
+  border-radius: none;
   border: none;
 }
 img.small {
-  max-width: 5rem;
+  max-width: 25rem;
+  max-height: 30rem;
   width: 100%;
+  height: 100%;
+  border: 1px solid black;
+  margin-left: 1rem;
 }
 img.medium {
   width: 100%;
@@ -330,6 +334,31 @@ img.topproduct{
 
 }
 
+/* Cart */
+
+.carttitle{
+  font-family: 'Fugaz One', cursive;
+  font-size: 8rem;
+  font-weight: 600;
+  color: white;
+  background-color: black;
+  border-radius: 50%;
+  padding: 2rem;
+}
+.cart-row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  box-shadow: -2rem 2rem  black;
+  margin-left: 5rem;
+  padding: 3rem;
+  border: 1px solid black;
+  font-size: 2rem;
+  margin-top: 10rem;
+}
+
 
 /* Card */
 .card {
@@ -341,7 +370,7 @@ img.topproduct{
   align-self: flex-start;
 }
 .card-body {
-  padding-top: rem ;
+  padding-top: 3rem ;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
 }
