--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -3,7 +3,7 @@
     /* grid-area: header; */
     display: flex;
     background-color: rgba( 255, 255, 255, 0 );
-    padding-top: 1.4rem;
+    /* padding-top: 1.4rem; */
     /* padding-right: 3rem; */
     z-index: 1;
     justify-content: space-around;
