--- a/frontend/src/style/ProductCard.css
+++ b/frontend/src/style/ProductCard.css
@@ -23,7 +23,7 @@
 
 .card .product_image{
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: contain;
     border: 1px solid gray;
 }
@@ -45,7 +45,7 @@
 
   .card:hover .card-body{
     opacity: 1;
-    transform: translateY(0);
+    /* transform: translateY(0); */
   }
 
   .card:hover {
@@ -71,6 +71,7 @@
 
   .card-body img{
     width: 30%;
+    
     border-radius: 50%;
     border: 1px solid black;
     vertical-align: middle;
