--- a/frontend/src/style/Header.css
+++ b/frontend/src/style/Header.css
@@ -26,7 +26,7 @@ font-family: 'Fugaz One', cursive;
 font-size: 4.5rem;
 font-weight: bold;
 margin-top: 2rem;
-color: #fac83e;
+color: black;
 }
 
 
@@ -43,11 +43,11 @@ color: #fac83e;
     border: none;
     border-right: none;
     margin-right: 0.5rem;
-    color: #fac83e;
+    color: black;
   }
   .search input{
     border: none;
-    border-bottom: 1px solid #fac83e;
+    border-bottom: 1px solid black;
     background: none;
     width: 20vw;
   
@@ -88,55 +88,56 @@ color: #fac83e;
 /* Aside */
 .aside {
     position: fixed;
-    width: 50vw;
-    height: 30rem;
-    background-color:#fffbe8;
+    width: 50rem;
+    height: calc(100vh - 8rem);
+    background-color:white;
     z-index: 2 ;
-    transform: translate(-51vw);
-    transition: all 1s;
-    max-width: 400px;
-
+    transform: translate(-100%);
+    transition: all 0.6s;
+    /* max-width: 400px; */
   }
   .aside.open{
     transform: translate(0) ;
-    border-radius: 0px 120rem 120rem 0px;
   }
   .categories{
     padding-left: 2rem;
   }
+
+  .categories ul{
+    margin-top: 4rem;
+  }
   
   .brandName button{
     background:none;
-    color: #fac83e;
+    color: black;
     cursor:pointer;
     border: none;
   }
   
 .categories_category{
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: black;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
   }
   
 .categories_category:hover{
-font-size: 2.1rem;
 color: black;
 }
 
-.categories_category:before{
+.categories_category:after{
 content: "";
-position: absolute;
-width: 0.3rem;
-height: 0.3rem;
-border-radius: 50%;
-border: 2px solid black;
+width: 8px;
+height: 8px;
 transition: 0.5s;
+background-color: black;
+display: block;
 }
 
-.categories_category:hover:before{
+.categories_category:hover::after{
 content: "";
-width: 15rem;
-height: 0.1rem;
-border-radius: 20%;
+width: 150px;
+height: 3px;
 }
 
 aside ul{
