--- a/frontend/src/style/Footer.css
+++ b/frontend/src/style/Footer.css
@@ -3,9 +3,10 @@
 /* Footer */
 
 .footer {
-    background-color: #74c0c4;
-    color: #e9eff0;
-
+    /* background-color: #74c0c4; */
+    color: black;
+    min-height: 20rem;
+    margin-top: 10rem;
   }
 
 .footer-row{
@@ -15,7 +16,7 @@
     align-items: center;
     width: 100%;
     height: 500%;
-    background-color: #74c0c4;
+    background-color: black;
     color: #e9eff0;
     font-family: 'Fugaz One', cursive;
     padding: 0 2rem 0 2rem;
