--- a/frontend/src/style/List.css
+++ b/frontend/src/style/List.css
@@ -1,6 +1,6 @@
 .list{
     margin: 8rem 12vw 8rem 12vw;
-    min-height: 100%;
+    min-height: calc(100vh - 36rem);
     width: auto;
     justify-content: space-around;
     display: flex;
@@ -34,7 +34,6 @@
 .table{
     width: 100%;
     border-collapse: collapse;
-    min-height: 55vh;
     margin-left: 4vw;
     margin-right: 4vw;
     
