--- a/frontend/src/style/Profile.css
+++ b/frontend/src/style/Profile.css
@@ -29,7 +29,9 @@
     max-width: 80rem;
     height: 100%;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid #a6a6a6;
+    box-shadow: 5px 5px #dbdbdb; */
+    border-radius: 10px;
     margin-bottom: 5rem;
     margin-top: 5rem;
     display: flex;
@@ -83,4 +85,37 @@
     border: 5px dashed black;
   }
   
+
+  .sellerLogo_container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50vw;
+    max-width: 500px;
+  }
+
+  .sellerLogo_container span{
+    width: 100px;
+  }
+
+  .profile_seller_image{
+    width: 250px;
+    height: 250px;
+    overflow: hidden;
+  }
+
+  .profile_seller_image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .sellerLogo_container input{
+    width: 15px;
+    height: 15px;
+    transform: translate(-14px, 17px);
+    opacity: 0;
+    cursor: pointer;
+  }
+
   
