--- a/frontend/src/style/Auth.css
+++ b/frontend/src/style/Auth.css
@@ -10,7 +10,6 @@
 
 
 /* Form */
-
   
   .auth-form{
     height: 100%;
@@ -22,9 +21,9 @@
     justify-content: space-around;
     margin: 2rem 0 2rem 0;
     text-align: center;
-    border: 1px solid black;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 3rem;
   }
   .auth-form .container{
     margin: 2rem 0 2rem 0;
