--- a/frontend/src/style/Home.css
+++ b/frontend/src/style/Home.css
@@ -8,11 +8,30 @@
     position: relative;
 }
 
-.topproducts_image{
+.topproducts-background{
     width: 100%;
     height: 70vh;
+    position: relative;
+    border: 5px solid black;
+
+}
+
+.topproducts_image{
+    width: 40%;
+    height: 40vh;
     overflow: hidden;
     border: 5px solid black;
+    position: absolute;
+}
+
+.topproduct_image0{
+    top: 8vh;
+    left: 6%;
+}
+
+.topproduct_image1{
+    top: 20vh;
+    left: 53%;
 }
 
 .topproducts img{
@@ -21,36 +40,43 @@
     object-fit: cover;
 }
 
-.topproducts_info{
+ .topproducts-title{
+     position: absolute;
+     top: 10vh;
+     left: 10%;
+     width: 80vw;
+     height: 60vh;
+     padding: 1rem;
+ }
+
+ .topproducts-title img{
+    width: 100%;
+    height: 100%;
+    object-fit:contain;
+ }
+
+
+/* .topproducts_info{
     position: absolute;
-
-    top: 0;
-    padding: 10px 10px;
-    border-radius: 10%;
-    color: black;
+    color: #faba25;
+    font-size: 8rem;
     overflow: hidden;
-    width: 40vw;
-    height: auto;
-    word-break: break-all;
-    width: 70vh;
-    font-weight: 400;
-    font-style: italic;
-    font-size: 11px;
+    -webkit-text-stroke: 3px black;
+    text-transform: uppercase;
 }
 
-.topproducts_info .name{
-    text-align: center;
-    font-size: 7vw;
+.topproduct_info0{
+    top: 38vh;
+    left: 6%;
 }
 
-.topproducts_info  .seller{
-    text-align: right;
-    font-size: 3vw;
+.topproduct_info1{
+    top: 50vh;
+    left: 53%;
 }
+ */
 
-.topproducts_info .description{
-    font-size: 1vw;
-}
+
 
 
 
